--- a/1.html
+++ b/1.html
@@ -17,7 +17,7 @@
 왼쪽은 컴퓨터가 하는 일
 <br>조금 더 내용을 추가 해봅시다
 <p>현재 21:38분 생활코딩 html 강의를 듣고있어용
-필균이는 샤워를 하러 갔습니다</p>
+그는 샤워를 하러 갔습니다</p>
 <img src="door.jpg"="door.jpg" width="100%">
 <p>맥북은 280만원 24개월 할부에요
 ㅁㅎ는 할부의 노예지요
